--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
 
 :root {
-  font-family: "League Spartan", sans-serif;
+  font-family: "League Spartan", sans-serif !important;
   line-height: 1.5;
   font-weight: 400;
   font-synthesis: none;
