--- a/src/page/flightList/flighList.css
+++ b/src/page/flightList/flighList.css
@@ -1,3 +1,112 @@
+/* flightLoader.css */
+
+.header {
+    padding: 10px auto;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 50px;
+}
+
+.loader-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(255, 255, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.plane-loader {
+    position: relative;
+    text-align: center;
+}
+
+.plane {
+    width: 100px;
+    height: 100px;
+    background: url('../../assets/plane.png') no-repeat center center;
+    background-size: contain;
+    animation: fly 3s linear infinite;
+}
+
+.cloud {
+    position: absolute;
+    width: 170px;
+    height: 100px;
+    background: url('../../assets/cloud.png') no-repeat center center;
+    background-size: contain;
+    animation: movecloud 10s linear infinite;
+}
+
+.cloud1 {
+    top: 20px;
+    left: -150px;
+    animation-delay: 0s;
+}
+
+.cloud2 {
+    top: 60px;
+    right: -50px;
+    animation-delay: 2s;
+}
+
+.cloud3 {
+    top: -10px;
+    left: 100px;
+    animation-delay: 4s;
+}
+
+.cloud.animated {
+    animation: movecloud 8s linear infinite alternate;
+}
+
+@keyframes movecloud {
+    0% {
+        transform: translateX(0);
+    }
+
+    50% {
+        transform: translateX(20px) translateY(-10px);
+    }
+
+    100% {
+        transform: translateX(40px);
+    }
+}
+
+@keyframes fly {
+    0% {
+        transform: translateX(-200px);
+    }
+
+    50% {
+        transform: translateX(0px) translateY(-20px);
+    }
+
+    100% {
+        transform: translateX(200px);
+    }
+}
+
+@keyframes movecloud {
+    0% {
+        transform: translateX(-100px);
+    }
+
+    100% {
+        transform: translateX(300px);
+    }
+}
+
+.spinner-container {
+    text-align: center;
+}
+
 .center-text-accordion-button .accordion-button {
     text-align: center;
     display: grid;
@@ -6,7 +115,7 @@
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #0d6efd;
+    color: #349dd4;
     text-align: center;
     text-decoration: none;
     vertical-align: middle;
@@ -14,7 +123,7 @@
     -webkit-user-select: none;
     -moz-user-select: none;
     user-select: none;
-    border: 1px solid #0d6efd;
+    border: 1px solid #349dd4;
     border-radius: 0.375rem;
     background-color: transparent;
     transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
@@ -35,8 +144,8 @@
 
 .center-text-accordion-button .accordion-button:hover {
     color: #fff;
-    background-color: #0d6efd;
-    border-color: #0d6efd;
+    background-color: #0e3b5e;
+    border-color: #0e3b5e;
 }
 
 .card {
@@ -92,8 +201,131 @@
 }
 
 .link-span {
-    color: #0d6efd;
+    color: #349dd4;
     text-decoration: underline;
     cursor: pointer;
     font-size: 1rem;
+}
+
+.btn-primary {
+    background-color: #349dd4;
+    border-color: #349dd4;
+}
+
+.btn-outline-primary {
+    color: #349dd4;
+    border-color: #349dd4;
+}
+
+.btn-outline-primary:hover {
+    color: #fff;
+    background-color: #349dd4;
+    border-color: #349dd4;
+}
+
+.btn-outline-secondary {
+    color: #0e3b5e;
+    border-color: #0e3b5e;
+}
+
+.btn-outline-secondary:hover {
+    color: #fff;
+    background-color: #0e3b5e;
+    border-color: #0e3b5e;
+}
+
+/* Loading Spinner Styles */
+.loader-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(255, 255, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.plane-loader {
+    position: relative;
+    text-align: center;
+}
+
+.plane {
+    width: 100px;
+    height: 100px;
+    background: url('../../assets/plane.png') no-repeat center center;
+    background-size: contain;
+    animation: fly 3s linear infinite;
+}
+
+.cloud {
+    position: absolute;
+    width: 170px;
+    height: 100px;
+    background: url('../../assets/cloud.png') no-repeat center center;
+    background-size: contain;
+    animation: movecloud 10s linear infinite;
+}
+
+.cloud1 {
+    top: 20px;
+    left: -150px;
+    animation-delay: 0s;
+}
+
+.cloud2 {
+    top: 60px;
+    right: -50px;
+    animation-delay: 2s;
+}
+
+.cloud3 {
+    top: -10px;
+    left: 100px;
+    animation-delay: 4s;
+}
+
+.cloud.animated {
+    animation: movecloud 8s linear infinite alternate;
+}
+
+@keyframes movecloud {
+    0% {
+        transform: translateX(0);
+    }
+
+    50% {
+        transform: translateX(20px) translateY(-10px);
+    }
+
+    100% {
+        transform: translateX(40px);
+    }
+}
+
+@keyframes fly {
+    0% {
+        transform: translateX(-200px);
+    }
+
+    50% {
+        transform: translateX(0px) translateY(-20px);
+    }
+
+    100% {
+        transform: translateX(200px);
+    }
+}
+
+@keyframes movecloud {
+    0% {
+        transform: translateX(-100px);
+    }
+
+    100% {
+        transform: translateX(300px);
+    }
 }
