--- a/src/page/flightList/flighList.css
+++ b/src/page/flightList/flighList.css
@@ -1,11 +1,56 @@
 /* flightLoader.css */
 
+body{
+    color: #0e3b5e !important;
+}
+
+.hero-list{
+    padding: 20px;
+    border-radius: 15px;
+    background-color: #0e3b5e !important;
+    color: #fff !important;
+}
+
 .header {
     padding: 10px auto;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     padding-left: 50px;
+}
+
+.flight-origin,
+.flight-destination {
+    font-weight: bold;
+}
+
+.flight-path {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.flight-line-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+}
+
+.flight-line {
+    flex-grow: 1;
+    border-top: 2px dotted #fff;
+    margin: 0 30px;
+    margin-top: -15px;
+}
+
+.plane-icon {
+    font-size: 24px;
+    color: #ffffff;
+    transform: rotate(90deg) !important;
+    margin-top: -10px;
+    margin-left: -10px;
 }
 
 .loader-overlay {
@@ -115,7 +160,8 @@
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #349dd4;
+    color: #fff !important;
+    background-color: #0e3b5e !important;
     text-align: center;
     text-decoration: none;
     vertical-align: middle;
@@ -123,7 +169,7 @@
     -webkit-user-select: none;
     -moz-user-select: none;
     user-select: none;
-    border: 1px solid #349dd4;
+    border: none;
     border-radius: 0.375rem;
     background-color: transparent;
     transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
@@ -150,6 +196,10 @@
 
 .card {
     border-radius: 10px;
+    background-color: #dbecef;
+    color: #0e3b5e;
+    border: none;
+    margin: 10px;
 }
 
 .card-title {
@@ -208,19 +258,25 @@
 }
 
 .btn-primary {
-    background-color: #349dd4;
-    border-color: #349dd4;
+    background-color: #349dd4 !important;
+    border-color: #349dd4 !important;
+}
+
+.btn-primary:hover {
+    background-color: #349dd4 !important;
+    border-color: #349dd4 !important;
+    color: #fff !important;
 }
 
 .btn-outline-primary {
-    color: #349dd4;
+    color: #349dd4 !important;
     border-color: #349dd4;
 }
 
 .btn-outline-primary:hover {
-    color: #fff;
-    background-color: #349dd4;
-    border-color: #349dd4;
+    background-color: #349dd4 !important;
+    border-color: #349dd4 !important;
+    color: #fff !important;
 }
 
 .btn-outline-secondary {
@@ -229,7 +285,6 @@
 }
 
 .btn-outline-secondary:hover {
-    color: #fff;
     background-color: #0e3b5e;
     border-color: #0e3b5e;
 }
@@ -328,4 +383,110 @@
     100% {
         transform: translateX(300px);
     }
+}
+
+
+/* linea detalle avion */
+
+.text-duration{
+    color: #9bc5db !important;
+    font-weight: 700;
+    font-size: 20px;
+    margin-bottom: -10px;
+}
+
+.text-code{
+    color: #0e3b5e !important;
+    font-weight: 700;
+}
+
+.flight-route {
+    position: relative;
+    width: 100%;
+}
+
+.flight-details-icon {
+    font-size: 2rem;
+    /* Ajusta el tamaño según necesites */
+    color: #003865;
+    /* Ajusta el color si es necesario */
+    z-index: 1;
+    position: relative;
+    transform: rotate(90deg);
+    /* Rota el avión 90 grados */
+}
+
+.flight-point {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: #003865;
+    border: 4px solid #83bcc7;
+}
+
+.flight-details-icon {
+    font-size: 2rem;
+    color: #003865;
+    z-index: 1;
+    position: relative;
+}
+
+
+
+
+.day-selector-wrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.day-selector {
+    flex: 1;
+    display: flex;
+    gap: 15px;
+    /* Espacio entre botones */
+    scroll-behavior: smooth;
+}
+
+.day-button {
+    border: none;
+    background: transparent;
+    font-size: 1rem;
+    font-weight: 500;
+    padding: 10px 15px;
+    white-space: nowrap;
+    transition: all 0.3s ease-in-out;
+    border-radius: 15px;
+    /* Borde redondeado */
+}
+
+.day-button:hover {
+    background-color: #f0f0f0;
+}
+
+.btn-selected {
+    border: 2px solid #349dd4;
+    /* Borde verde al seleccionar */
+    font-weight: bold;
+}
+
+.scroll-button {
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    color: #333;
+    cursor: pointer;
+    transition: color 0.3s ease;
+}
+
+.scroll-button:hover {
+    color: #000;
+}
+
+.left-button {
+    margin-right: 10px;
+}
+
+.right-button {
+    margin-left: 10px;
 }
